@startuml game_class_diagram

package ebiten {
    interface Game {
        + Update() error
        + Draw(screen *ebiten.Image)
        + Layout(outsideWidth, outsideHeight int) (screenWidth, screenHeight int)
    }
}

class "エントリーポイント" {
    - {static} main() <<entrypoint>>
}

"エントリーポイント" ..right..> game.Game
"エントリーポイント" ..right..> scene.Hoge

package game {
    class Game {
        - ActiveScene Scene
        - BackScene Stack[Scene]
        + Update() error
        + Draw(screen *ebiten.Image)
        + Layout(outsideWidth, outsideHeight int)
    } 
    note right of Game : シーンの管理が主な役割\nUpdate() は ActiveScene.Update(true) と BackScene.Update(false) を呼ぶ\nその他は BackScene -> ActiveScene の順で\nStack は Utils パッケージ

    interface Scene {
        + Name() string
        + Update(active bool) (nextScene Utils.Factory[Scene], transitionType transition.Type, err error)
        + Draw(screen *ebiten.Image)
    }

    Game -up--|> ebiten.Game
    Game "1" o-- "1..*" Scene
}

package scene {
    class Hoge {
        + Init()
        + Name() string
        + Update(active bool) (nextScene Utils.Factory[Scene], transitionType transition.Type, err error)
        + Draw(screen *ebiten.Image)
    }
    note right of Hoge : 具体的なシーン

    Hoge -up-|> game.Scene
}

@enduml